# nova

./: .Plan  .bandit  .cursornotes  .cursorrules  .cursorrules.bak  .cursorscratchpad  .env.template  .flake8  .gitignore  .gitmessage  .pre-commit-config.yaml  .repo_ignore  .repomixignore  .yamllint  CHANGELOG.md  CONTRIBUTING.md  README.md  VERSION.md  alerts.db  all_merged_markdown.md  assistant_snippet_Py5hOoagE3.txt  attachment_processor.py  changes.diff  cleanup.sh  colors.py  config.toml.example  consolidate.sh  consolidate_processor.py  consolidated.md  directory_manager.py  input_processor.py  install.sh  markdown_consolidator.py  markdown_processor.py  markdown_splitter.py  markdown_to_pdf_converter.py  nova.toml.template  output.txt  pdf_to_markdown_converter.py  pipeline_manager.py  (+14 more)
${NOVA_PHASE_MARKDOWN_PARSE}/: 20240910 - BB Customer Commitments.md  20240910 - BB Customer Commitments.meta.json  20241104 - Journal.md  20241104 - Journal.meta.json  20241118 - CTO, CEO, Chief Architect New Platform Discussoin.md  20241218 - Format Test.md  20241218 - Format Test.meta.json
.cursor/prompts/: create plan.md  next step in plan.md  startup and create design.md  startup basic.md  startup with existing docs.md
.cursor/rules/: cursor-tools.mdc  nova.mdc
.github/: CODEOWNERS
config/: consolidate-markdown.template.toml  default_config.yaml  nova.backup.yaml  nova.dev.yaml  nova.template.yaml  nova.yaml  nova.yaml.template  pipeline_config.yaml  staging.yaml
docs/: .Plan  .cursorrules  .prd  architecture.md  configuration.md  console_output.md  constraints.md  cursor_rules.md  dependencies.md  developer_guide.md  examples.md  handlers.md  import_standards.md  monitoring.md  new-architecture.md  patterns.md  phase.md  phases.md  prd.md  quick_reference.md  schema.md  test.md  testing.md  troubleshooting.md  user_guide.md
docs/alerts/: README.md
docs/api/: README.md  monitoring.md  reference.md
docs/architecture/: implementation.md  overview.md  system_architecture.md
docs/deployment/: guide.md
docs/development/: quickstart.md  style_guide.md
docs/ephemeral/: examples.md  overview.md  troubleshooting.md
docs/frontend/: README.md  components.md
docs/migration/: vector_store.md
docs/monitoring/: README.md
docs/new_features/: rebuild_script_architecture.md  rebuild_script_improvements.md
docs/prd/: product_requirements.md
docs/prompts/: Nova.prompt.html  convertContent.prompt  convertJournal.prompt  convertMeeting.prompt  convertWebpageToMarkdown.prompt
docs/troubleshooting/: README.md
examples/: process_images.py
nova/: __init__.py  cli.py  exceptions.py
nova/commands/: __init__.py  consolidate.py  upload.py
nova/config/: __init__.py  loader.py  models.py
nova/ingestion/: __init__.py  bear.py  converter.py  types.py
nova/llm/: __init__.py  claude.py
nova/processing/: __init__.py  chunking.py  types.py  vector_store.py
nova/rag/: __init__.py  ephemeral.py
nova/utils/: __init__.py  config.py  logging.py
output/: basic.md  test1.md  test2.md
playwright-report/: index.html
prompts/: Nova.prompt  convertContent.prompt  convertMeeting.prompt  convertWebpageTomarkdown.prompt
prompts/raycast prompts/: convertJournal.prompt  convertMeeting.prompt
resources/prompts/: Nova.prompt
scripts/: common.sh  generate_metadata.py  measure_imports.py  process_notes.py  rebuild.sh  start_echo.sh  start_nova_mcp.sh  validate_yaml.py
src/: __init__.py  cli.py  pipeline.py
src/cli/: main.py
src/core/: __init__.py  base_config.py  config.py  context.py  document_consolidator.py  document_relationships.py  docx_processor.py  errors.py  exceptions.py  filename_processor.py  logging.py  markdown_consolidator.py  markdown_to_pdf_converter.py  models.py  openai_client.py  paths.py  pdf.py  pdf_generator.py  pdf_to_markdown_converter.py  pipeline.py  processor.py  resource_manager.py  state.py  template_manager.py  types.py  validation.py
src/generators/: pdf_generator.py
src/nova/: __init__.py  cleanup.py  cli.py  config.py  logging.py  main.py  utils.py
src/pipeline/: __init__.py  consolidate.py  markdown.py  pdf.py
src/processors/: __init__.py  attachment_processor.py  base_processor.py  consolidation_processor.py  document_consolidator.py  docx_processor.py  embedded_content_processor.py  html_processor.py  image_processor.py  individual_processor.py  markdown_processor.py  markdown_to_pdf_processor.py  metadata_processor.py  models.py  office_processor.py  pdf_generator.py  pdf_processor.py  pdf_to_markdown_converter.py  powerpoint_processor.py  pptx_processor.py  word_processor.py  word_to_markdown_converter.py
src/stubs/: bs4.pyi  magic.pyi  mammoth.pyi  markdown.pyi  networkx.pyi  pandas.pyi  pptx.pyi  structlog.pyi  weasyprint.pyi
src/utils/: __init__.py  colors.py  filename_processor.py  path_utils.py  shell_helpers.py  timing.py
styles/: default_style.css
templates/: default_template.html
test/_NovaInput/: 20241029 - Infrastructure Team Info.md  20241029 - Infrastructure Team Info.md.meta.json  20241029 - Infrastructure Team Info.md.xref.json  20241104 - Journal.md  20241104 - Journal.md.meta.json  20241105 - Journal.md  20241105 - Journal.md.meta.json  20241118 - CTO, CEO, Chief Architect New Platform Discussoin.md  20241118 - CTO, CEO, Chief Architect New Platform Discussoin.md.meta.json  20241120 - Team Roster.md  20241120 - Team Roster.md.meta.json  20241126 - Leadership Questions.md  (+3 more)
tests/: __init__.py  conftest.py  test_attachments.py  test_claude.py  test_cli.py  test_config.py  test_consolidate_processor.py  test_content_converters.py  test_cross_references.py  test_document_processing.py  test_ephemeral.py  test_error_cases.py  test_ingestion.py  test_logging.py  test_markdown_aggregate.py  test_markdown_consolidate.py  test_markdown_parse.py  test_markdown_processor.py  test_mcp.py  test_performance.py  test_processing.py  test_rag.py  test_reference_manager.py  test_shell_output.sh  test_split.py  test_split_processor.py  test_state.py  test_three_file_split_processor.py  test_validation.py  utils.py
(+808 files in other folders)
