[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nova"
version = "0.1.0"
description = "A CLI tool for processing and uploading Markdown files to Graphlit."
requires-python = ">=3.12"
authors = [
    {name = "Nova Team"}
]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "graphlit-client",
    "toml",
    "pydantic>=2.0.0",
    "consolidate-markdown @ git+https://github.com/chadrwalters/consolidate-markdown.git"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.0.1",
    "pre-commit>=3.0.0",
]

[project.scripts]
nova = "nova.cli:main"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
filterwarnings = [
    "ignore::DeprecationWarning:websockets.*:",
    "ignore::pytest_asyncio.plugin.PytestDeprecationWarning:pytest_asyncio.*:",
    "ignore::RuntimeWarning:unittest.mock:",
    "ignore:coroutine.*never awaited:RuntimeWarning:sys",
    "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning:unittest.mock",
    "ignore:Enable tracemalloc to get the object allocation traceback:RuntimeWarning:",
    "ignore:websockets.client.WebSocketClientProtocol is deprecated:DeprecationWarning:graphlit_api.*:",
    "ignore:websockets.client.connect is deprecated:DeprecationWarning:graphlit_api.*:",
    "ignore:coroutine 'main_async' was never awaited:RuntimeWarning:"
]
asyncio_default_fixture_loop_scope = "function"
